--- a/package.json
+++ b/package.json
@@ -83,8 +83,8 @@
     "eslint-plugin-flowtype-errors": "^1.4.1",
     "eslint-plugin-import": "^2.0.1",
     "eslint-plugin-jsx-a11y": "^2.2.3",
-    "eslint-plugin-promise": "^3.3.0",
     "eslint-plugin-mocha": "^4.7.0",
+    "eslint-plugin-promise": "^3.3.0",
     "eslint-plugin-react": "^6.4.1",
     "express": "^4.14.0",
     "extract-text-webpack-plugin": "^1.0.1",
@@ -94,8 +94,10 @@
     "minimist": "^1.2.0",
     "mocha": "^3.1.2",
     "node-libs-browser": "^1.0.0",
+    "node-sass": "^3.10.1",
     "react-addons-test-utils": "^15.3.2",
     "redux-logger": "^2.7.0",
+    "sass-loader": "^4.0.2",
     "sinon": "^1.17.6",
     "spectron": "^3.4.0",
     "style-loader": "^0.13.1",
